v2.05 ??-???-09
Fixed reporting of largest creatable object (Patch from John Tytgat).
Removed use of special fields in generated mount names.

v2.04 17-Sep-07
Improved timeout and retry behaviour.
Fixed creation of Choices directory before trying writing to it.

v2.03 3-Aug-07
Fixed bug in selecting transport and protocol to use if mountd supports more options than nfsd.

v2.02 24-Jun-07
Fixed bug in selecting transport to use if the server didn't support TCP.
Fixed "Invalid filename" error on shutdown.
Added details of protocol and transport in export browser title bar.
Improved behaviour of toggle size icon in server and export browsers.
Fixed bug in discname canonicalisation.

v2.01 17-Jun-07
Fixed bug that resulted in no iconbar icon if all saved mounts were unavailable when the frontend was loaded.
Prevent creating a mount icon on the iconbar if mounting from the export browser window failed.

v2.00 3-Jun-07
Completely new frontend that allows browsing of available servers and exports.
Added full filing system support.
Fixed finding of mountd and nfsd port numbers from portmapper when NFS2 not
supported.
Fixed encoding that sometimes added garbage to the end of filenames.
Added TranslateWin option to translate characters that are illegal in Windows filenames.

v1.10 28-Mar-07
Fixed timestamp setting for OS_File 0 if the file already existed.
Fixed inaccuracy in calculation of nanosecond part of the timestamp.
The timestamp is now set when an open file is closed.
Now refetches the root filehandle if it is stale.
When reconnecting after a timeout, use a different socket to avoid delays.

v1.09 16-Oct-06
Fixed bug that caused the wrong attributes to be returned for a symlink that
couldn't be followed.
File sizes are limited to 2GB rather than 4GB as accessing > 2GB doesn't work.
Added UnixEx option to set filetype based on executable permissions.
Added filename encoding option.
Improved NFS3 writes for servers that support unstable storage.