@@ -178,7 +178,7 @@ You can also drag a directory from the export browser window to a normal filer w
 <hr>
 <h3>Name export window</h3>
 <p>
-By default, mounts will be named based on the IP address and export name. For example <code>Sunfish#172.16.0.1::/home/alex.$</code>. The name mount window allows you to specify a different name to use as the discname for the mount, which can make the path shorter or more meaningful. For example specifying the discname as <code>alex</code> would result in a pathname of <code>Sunfish::alex.$</code>.
+By default, mounts will be named based on the hostname or IP address and export name. For example <code>Sunfish::mint/home/alex.$</code>. The name mount window allows you to specify a different name to use as the discname for the mount, which can make the path shorter or more meaningful. For example specifying the discname as <code>alex</code> would result in a pathname of <code>Sunfish::alex.$</code>.
 <p>
 Note that the choices only take effect when you next mount the export.
 <p>
