@@ -58,11 +58,11 @@ editconnection::editconnection(int maxbuf) :
 }
 
 
-void editconnection::load(const string& host, string& exportname)
+void editconnection::load(const string& host, const string& ip, string& exportname)
 {
 	mountchoices mountinfo;
 	if (host.length() > 0) {
-		filename = mountinfo.genfilename(host, exportname);
+		filename = mountinfo.genfilename(host, ip, exportname);
 	}
 	mountinfo.load(filename);
 
@@ -73,9 +73,9 @@ void editconnection::load(const string& host, string& exportname)
 	logging.selected(mountinfo.logging);
 }
 
-void editconnection::open(const string& host, string& exportname, sunfish& app)
+void editconnection::open(const string& host, const string& ip, string& exportname, sunfish& app)
 {
-	load(host, exportname);
+	load(host, ip, exportname);
 	// Open window near mouse position.
 	os::pointer_info_get blk;
 	os::Wimp_GetPointerInfo(blk);
@@ -117,7 +117,7 @@ void editconnection::handle_event(events::mouse_click& ev)
 			remove();
 		} else {
 			string none;
-			load(none, none);
+			load(none, none, none);
 		}
 	}
 }
